# granuscore

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
assets/faiss/: 50k-all-min-random_anchors.npy  50k-hit-radial_anchors.npy  50k-hit-random_anchors_1332.npy  50k-hit-random_anchors_333.npy  50k-hit-random_anchors_66.npy  50k-hit-random_anchors_666.npy  50k-hit-random_anchors_999.npy
assets/lgb_models/: 50k-all-min-random_anchors_model.txt  50k-all-min-random_model.txt  50k-hit-embedding-radial_anchors_model.txt  50k-hit-embedding-random_anchors_model.txt  50k-hit-random_anchors-1332_model.txt  50k-hit-random_anchors-1665_model.txt  50k-hit-random_anchors-333_model.txt  50k-hit-random_anchors-33_model.txt  50k-hit-random_anchors-66_model.txt  50k-hit-random_anchors-999_model-old.txt  50k-hit-random_anchors-999_model.txt  50k-hit-random_anchors-99_model.txt  50k-hit-random_model.txt
assets/references/: scores-wordnet_nouns_radial_anchors.npy
evaluation/: pooling_ablation.ipynb
evaluation/papers/: build_ablation_table.ipynb  calc_effect_size.ipynb  parse_s2orc.ipynb  sanity_check_papers.py
evaluation/qa_datasets/: analyse_qa_datasets.ipynb  calc_gold_granularity.py  calc_output_granularity.py  create_batch_judge_qa_datasets.py  eval_datasets.py  google_client.py  judge_qa_datasets.py  llm_client.py  qa_dataset_figure.ipynb  simpleqa_eval.py  utils.py
evaluation/qa_datasets/collect_responses/: gather_batched_responses.ipynb  gather_qwen_think_responses.py  gather_responses.py
evaluation/sentence_specificity/: build_ablation_table.ipynb  build_specificity_graph.ipynb  domain-agnostic-correlations.py  news_articles_specificity_correlations.py  utils.py
notebooks/: build_granola_dataset.ipynb  create_reference_scores.ipynb  getting_started.ipynb  granola_eq_inspection.ipynb  granola_test_dataset.ipynb
src/granuscore/: __init__.py  artifcats.py  bucket_output.py  cache.py  claim_splitter.py  default_assets.py  granularity_predictor.py  loader.py  pipeline.py  text_cleaner.py  utils.py
src/granuscore/assets/faiss/: 50k-hit-random_anchors_1665.npy  50k-hit-random_anchors_33.npy  50k-hit-random_anchors_99.npy
src/granuscore/assets/lgb_models/: 50k-all-min-nearest_neighbor_model.txt  50k-hit-embedding-random_model.txt  50k-hit-nearest_neighbor_model.txt  50k-hit-radial_anchors_model.txt  50k-hit-random_anchors-666_model.txt
training_scripts/: build_index.py  build_radial_anchors.py  build_random_anchors.py  calc_reference_noun_scores.py  evaluate_lgb_models.py  train_lgb_models.py  utils.py
training_scripts/build_precalc_data/: build_hit_embedding_precalc_data.py  build_hit_precalc_data.py  build_len_precalc_data.py  build_llm_precalc_data.py  build_sentence_transformer_precalc_data.py  build_wordnet_precalc_data.py
training_scripts/evaluation_data/: build_table.ipynb  evaluate_lgb_models.jsonl  evaluate_lgb_ranking.txt  evaluate_significance-hit-random-anchors-999.jsonl  min_evaluate_lgb_models.jsonl  significance.jsonl
(+1 files in other folders)
