[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granuscore"
version = "1.0.0"
description = "Granularity scoring for natural language"
readme = "README.md"
requires-python = ">=3.9,<3.13"

authors = [
  {name = "Lukas Ellinger", email = "lukas.ellinger@tum.de"},
]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]

keywords = [
  "granularity",
  "natural language processing",
  "nlp",
  "text analysis",
  "semantic abstraction",
  "specificity"
]

dependencies = [
  "faiss-cpu>=1.13.2",
  "hierarchy_transformers>=0.1.1",
  "lightgbm>=4.6.0",
  "spacy>=3.8.11",
  "torch>=2.9.1",
  "numpy>=1.26.4",
  "platformdirs>=3.10.0",
  "requests>=2.31.0",
  "tqdm>=4.66.0",
  "openai>=2.21.0"
]

[project.urls]
Repository = "https://github.com/lukasellinger/granuscore"
Issues = "https://github.com/lukasellinger/granuscore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "optuna>=4.6.0",
  "pygam>=0.12.0",
  "python-dotenv>=1.2.1",
  "ollama>=0.6.1",
  "google-genai>=1.66.0",
  "wget>=3.2"
]